removing old APIs, adding Application data model

--- a/public/views/apply.ejs
+++ b/public/views/apply.ejs
@@ -70,21 +70,21 @@
               </h5>
               <div class="row">              
                 <div class="col-md-7 mb-1">
-                  <input type="text" class="form-control" name="currentStreet" placeholder="Street" required>
+                  <input type="text" class="form-control" name="street" placeholder="Street" required>
                 </div>
                 <div class="col-md-5 mb-1">
-                  <input type="text" class="form-control" name="currentCity" placeholder="City" required>
+                  <input type="text" class="form-control" name="city" placeholder="City" required>
                 </div>
               </div>
               <div class="row">              
                 <div class="col-md-5 mb-1">
-                  <input type="text" class="form-control" name="currentZip" placeholder="Zip Code" required>
+                  <input type="text" class="form-control" name="zip" placeholder="Zip Code" required>
                 </div>
                 <div class="col-md-4 mb-1">
-                  <input type="text" class="form-control" name="currentState" placeholder="State" required>
+                  <input type="text" class="form-control" name="state" placeholder="State" required>
                 </div>
                 <div class="col-md-3 mb-2">
-                  <input type="text" class="form-control" name="currentTimeLived" placeholder="Length of Time" required>
+                  <input type="text" class="form-control" name="timeLived" placeholder="Length of Time" required>
                 </div>
               </div>
               <h5 class="form-signin-heading mt-2">
@@ -92,15 +92,15 @@
               </h5>
               <div class="row">              
                 <div class="col-md-6 mb-2">
-                  <input type="text" class="form-control" name="currentLandlordFName" placeholder="First Name">
+                  <input type="text" class="form-control" name="landlordFName" placeholder="First Name">
                 </div>                       
                 <div class="col-md-6 mb-2">
-                  <input type="text" class="form-control" name="currentLandlordLName" placeholder="Last Name">
+                  <input type="text" class="form-control" name="landlordLName" placeholder="Last Name">
                 </div>
               </div>
               <div class="row">              
                 <div class="col-md-6 mb-2">
-                  <input type="tel" class="form-control" name="currentLandlordPhone" placeholder="Phone">
+                  <input type="tel" class="form-control" name="landlordPhone" placeholder="Phone">
                 </div>
               </div>
               <hr class="thick-hr" />
@@ -163,34 +163,34 @@
               </h5>
               <div class="row">              
                 <div class="col-md-6 mb-2">
-                  <input type="text" class="form-control" name="currentEmployer" placeholder="Business Name" required>
+                  <input type="text" class="form-control" name="employer" placeholder="Business Name" required>
                 </div>
                 <div class="col-md-6 mb-2">
-                  <input type="tel" class="form-control" name="currentEmployerPhone" placeholder="Phone" required>
+                  <input type="tel" class="form-control" name="employerPhone" placeholder="Phone" required>
                 </div>
               </div>
               <div class="row">              
                 <div class="col-md-7 mb-1">
-                  <input type="text" class="form-control" name="currentEmployerStreet" placeholder="Street" required>
+                  <input type="text" class="form-control" name="employerStreet" placeholder="Street" required>
                 </div>
                 <div class="col-md-5 mb-1">
-                  <input type="text" class="form-control" name="currentEmployerCity" placeholder="City" required>
+                  <input type="text" class="form-control" name="employerCity" placeholder="City" required>
                 </div>
               </div>
               <div class="row">              
                 <div class="col-md-6 mb-1">
-                  <input type="text" class="form-control" name="currentEmployerZip" placeholder="Zip Code" required>
+                  <input type="text" class="form-control" name="employerZip" placeholder="Zip Code" required>
                 </div>
                 <div class="col-md-6 mb-1">
-                  <input type="text" class="form-control" name="currentEmployerState" placeholder="State" required>
+                  <input type="text" class="form-control" name="employerState" placeholder="State" required>
                 </div>
               </div>
               <div class="row">              
                 <div class="col-md-4 mb-2">
-                  <input type="text" class="form-control" name="currentPosition" placeholder="Position" required>
+                  <input type="text" class="form-control" name="position" placeholder="Position" required>
                 </div>                      
                 <div class="col-md-4 mb-2">
-                  <input type="text" class="form-control" name="currentEmpPeriod" placeholder="Employment Period" required>
+                  <input type="text" class="form-control" name="timeWorked" placeholder="Employment Period" required>
                 </div>
               </div>
               <h5 class="form-signin-heading mt-2">
@@ -198,10 +198,10 @@
               </h5>
               <div class="row">              
                 <div class="col-md-4 mb-2">
-                  <input type="text" class="form-control" name="currentSupervisorFName" placeholder="First Name" required>
+                  <input type="text" class="form-control" name="supervisorFName" placeholder="First Name" required>
                 </div>                      
                 <div class="col-md-4 mb-2">
-                  <input type="text" class="form-control" name="currentSupervisorLName" placeholder="Last Name" required>
+                  <input type="text" class="form-control" name="supervisorLName" placeholder="Last Name" required>
                 </div>
               </div>
               <hr class="thick-hr" />
@@ -237,7 +237,7 @@
                   <input type="text" class="form-control" name="previousPosition" placeholder="Title">
                 </div>                      
                 <div class="col-md-4 mb-2">
-                  <input type="text" class="form-control" name="previousEmpPeriod" placeholder="Employment Period">
+                  <input type="text" class="form-control" name="previousTimeWorked" placeholder="Employment Period">
                 </div>
               </div>
               <h5 class="form-signin-heading mt-2">
@@ -283,7 +283,7 @@
                   <input type="text" class="form-control" name="secondRoommateFName" placeholder="First Name">
                 </div>                 
                 <div class="col-md-6 mb-2">
-                  <input type="text" class="form-control" name="secondRoommateFName" placeholder="Last Name">
+                  <input type="text" class="form-control" name="secondRoommateLName" placeholder="Last Name">
                 </div>
               </div>
               <div class="row">              
