Updating application, creating tenant dashboard

--- a/public/dashboard_admin/adminUsers/adminUsers.ejs
+++ b/public/dashboard_admin/adminUsers/adminUsers.ejs
@@ -3,7 +3,7 @@
   <% include ../includes/dashboardHead %>
 
   <body class="container-fluid">
-    <% include ../includes/dashboardNav %>
+    <% include ../includes/adminNav %>
 
       <div id="form">
         <form class="container" action="/api/administrator/create" method="post">
