--- a/public/dashboard_admin/users/users.ejs
+++ b/public/dashboard_admin/users/users.ejs
@@ -3,7 +3,7 @@
   <% include ../includes/dashboardHead %>
 
   <body class="container-fluid">
-    <% include ../../includes/dashboardNav %>
+    <% include ../../includes/adminNav %>
 
       <div class="row">
         <div class="col-2">
