--- a/public/dashboard_admin/data/data.ejs
+++ b/public/dashboard_admin/data/data.ejs
@@ -3,7 +3,7 @@
 <% include ../includes/dashboardHead %>
 
   <body class="container-fluid">
-    <% include ../includes/dashboardNav %>
+    <% include ../includes/adminNav %>
 
       <div class="row" ng-controller="dashboardCtrl">
 
