--- a/public/dashboard_tenant/tenant.ejs
+++ b/public/dashboard_tenant/tenant.ejs
@@ -1,22 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
   <% include ../includes/dashboardHead %>
-  <body>
-    <div>
 
-      <a href="/logout">Logout</a>
+  <body class="container-fluid">
+    <% include ../includes/settingsModal %>    
 
-      <h2>
-        Welcome, <%- fullName %>.
-      </h2>
+    <div class="row margin-bottom-10">
+      <div class="col-9">
+        <h2 class="text-capitalize">
+          Welcome, <%- fullName %>.
+        </h2>
+      </div> <!-- END COL -->
 
-      <br />
+      <div class="col-3 corner-button-container">
+        <a href="#" data-toggle="modal" data-target="#settingsModal" class="btn btn-outline-primary corner-link settingsButton">Settings</a>
+        <a href="/logout" class="btn btn-outline-primary corner-link">Logout</a>           
+      </div> <!-- END COL -->
+    </div> <!-- END ROW -->
 
-      <h4>
-        Time: <%= time %>
-      </h4>
-    </div>
-  
-    <% include ../includes/scripts %>
+    <hr class="thick-hr margin-top-10" />
+
+    <div class="row margin-top-40">
+      <div class="col-12">
+        <div class="nav nav-pills nav-fill">
+          <div class="nav-item">
+            <a class="nav-link home-link" href="/application">dashboard</a>
+          </div>
+        </div> <!-- END NAV -->
+      </div> <!-- END COL -->
+    </div> <!-- END ROW -->
+
+    <div ng-app="ngAdmin">
+      <div class="row" ng-controller="dashboardCtrl">
+        <div class="col-12">
+        </div> <!-- END COL -->
+      </div> <!-- END ROW -->
+    </div> <!-- END NG -->
+
+    <% include ../includes/dashboardScripts %>
   </body>
 </html>
