--- a/public/includes/dashboard_tenant/nav.ejs
+++ b/public/includes/dashboard_tenant/nav.ejs
@@ -23,7 +23,7 @@
           <a class="nav-link main-link" href="/application">application</a>
         </div>
         <div class="nav-item">
-          <a class="nav-link main-link" href="/billing">billing</a>
+          <a class="nav-link main-link" href="/bills">billing</a>
         </div>
       </div> <!-- END NAV -->
 
