--- a/public/dashboard_admin/data/data.ejs
+++ b/public/dashboard_admin/data/data.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<% include ../includes/dashboardHead %>
+  <% include ../../includes/dashboard_admin/head %>
 
   <body class="container-fluid">
-    <% include ../includes/adminNav %>
+    <% include ../../includes/dashboard_admin/nav %>
 
       <div class="row" ng-controller="dashboardCtrl">
 
@@ -183,6 +183,6 @@
       </div> <!-- END ROW -->
     </div> <!-- END NG -->
 
-    <% include ../includes/dashboardScripts %>
+    <% include ../../includes/dashboard_admin/scripts %>
   </body>
 </html>
