--- a/public/dashboard_tenant/application/application.ejs
+++ b/public/dashboard_tenant/application/application.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <% include ../includes/dashboardHead %>
+  <% include ../../includes/dashboard_tenant/head %>
 
   <body class="container-fluid">
-    <% include ../../includes/tenantNav %>
+    <% include ../../includes/dashboard_tenant/nav %>
 
      <ul class="nav nav-tabs">
         <li class="nav-item">
@@ -637,8 +637,6 @@
       </div> <!-- END TABS -->
     </div> <!-- END CONTAINER -->
 
-    <% include ../includes/footer %>
-    
-    <% include ../includes/scripts %>
+    <% include ../../includes/dashboard_tenant/scripts.ejs %>
   </body>
 </html>
