--- a/public/dashboard_tenant/tenant.ejs
+++ b/public/dashboard_tenant/tenant.ejs
@@ -24,7 +24,7 @@
       <div class="col-12">
         <div class="nav nav-pills nav-fill">
           <div class="nav-item">
-            <a class="nav-link home-link" href="/application">application</a>
+            <a class="nav-link home-link" href="/application">Application</a>
           </div>
         </div> <!-- END NAV -->
       </div> <!-- END COL -->
