--- a/public/includes/dashboard_tenant/nav.ejs
+++ b/public/includes/dashboard_tenant/nav.ejs
@@ -20,10 +20,10 @@
 
       <div class="nav nav-pills nav-fill">
         <div class="nav-item">
-          <a class="nav-link main-link" href="/application">application</a>
+          <a class="nav-link main-link" href="/application">Application</a>
         </div>
         <div class="nav-item">
-          <a class="nav-link main-link" href="/bills">billing</a>
+          <a class="nav-link main-link" href="/bills">Billing</a>
         </div>
       </div> <!-- END NAV -->
 
