Not allowing empty strings to be submitted

--- a/public/dashboard_admin/properties/properties.ejs
+++ b/public/dashboard_admin/properties/properties.ejs
@@ -175,7 +175,7 @@
                 <form class="container mt-5 ml-5" action="/api/property/delete" method="post">
                   <div class="row">              
                     <div class="col-md-8 mb-2 mt-3">
-                      <input type="text" class="form-control" name="id" placeholder="ID">
+                      <input type="text" class="form-control" name="id" placeholder="ID" required>
                     </div>
                   </div>          
                   <button class="btn btn-md btn-default submit-button-center" type="submit">Submit</button>
