--- a/public/dashboard_admin/users/users.ejs
+++ b/public/dashboard_admin/users/users.ejs
@@ -121,7 +121,7 @@
                 <form class="container mt-5 ml-5" action="/api/unregisteredUser/delete" method="post">
                   <div class="row">              
                     <div class="col-md-8 mb-2">
-                      <input type="text" class="form-control" name="email" placeholder="Email">
+                      <input type="text" class="form-control" name="email" placeholder="Email" required>
                     </div>
                   </div>          
                   <button class="btn btn-md btn-default submit-button-center" type="submit">Submit</button>
