removing webkit bug

--- a/public/views/register.ejs
+++ b/public/views/register.ejs
@@ -37,7 +37,7 @@
               <input type="password" class="form-control" name="passwordTwo" placeholder="Confirm Password" required>
             </div>
           </div>
-          <button class="btn btn-md btn-default btn-block" type="submit">Login</button>
+          <button class="no-webkit btn btn-md btn-default btn-block" type="submit">Login</button>
         </form>
       </div>
 
