--- a/public/resources/css/main.css
+++ b/public/resources/css/main.css
@@ -105,3 +105,6 @@ nav .right {
   color: black; /* old IE */
   background-color: #333; /* Modern Browsers */
 }
+.no-webkit {
+  -webkit-appearance: none;
+}
