Updating Bootstrap from alpha to beta

--- a/public/includes/nav.ejs
+++ b/public/includes/nav.ejs
@@ -1,9 +1,9 @@
-<nav class="navbar navbar-toggleable-sm navbar-inverse bg-faded fixed-top" style="background-color: #800000;">
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-sm navbar-dark fixed-top" style="background-color: #800000;">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navCollapsed">
         <span class="navbar-toggler-icon"></span>
     </button>
     <a class="navbar-brand" href="/home">Unity Homes<span class="sr-only">(current)</span></a>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="collapse navbar-collapse" id="navCollapsed">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <a id="listings" class="nav-link" href="/listings">Premium Listings</a>
@@ -20,7 +20,7 @@
                 <a id="register" class="nav-link left" href="/register">Register</a>
             </li>
             <li>
-                <a href="/login" class="btn btn-outline-secondary btn-md" role="button" aria-pressed="true">Login</a>           
+                <a href="/login" class="btn btn-outline-light btn-md">Login</a>           
             </li>    
         </ul>
     </div>
