--- a/public/views/listings.ejs
+++ b/public/views/listings.ejs
@@ -60,23 +60,23 @@
                 </div> <!-- END ROW -->
               </div>
               <div class="form-check">
-                <label class="form-check-label mr-3">
+                <label class="form-check-label mr-5">
                   <input type="checkbox" class="form-check-input">
                   Basement
                 </label>
-                <label class="form-check-label mr-3">
+                <label class="form-check-label mr-5">
                   <input type="checkbox" class="form-check-input">
                   Garage
                 </label>
-                <label class="form-check-label mr-3">
+                <label class="form-check-label mr-5">
                   <input type="checkbox" class="form-check-input">
                   Fence
                 </label>
-                <label class="form-check-label mr-3">
+                <label class="form-check-label mr-5">
                   <input type="checkbox" class="form-check-input">
                   Washer / Dryer
                 </label>
-                <label class="form-check-label mr-3">
+                <label class="form-check-label mr-5">
                   <input type="checkbox" class="form-check-input">
                   Furnished
                 </label>
@@ -91,8 +91,8 @@
       <br />
 
       <div class="row">
-        <div class="col-md-6 mb-1">
-          <div class="card text-center" style="height: 26rem; width: 39rem; padding: 10px;">
+        <div class="col-md-6">
+          <div class="card h-100 text-center" style="padding: 10px;">
             <div class="card-body">
               <p class="card-text font-weight-bold">Property Address</p>
               <p class="card-text">Details: Number of rooms, fence, sq ft, etc.</p>
@@ -100,31 +100,33 @@
           </div>
         </div> <!-- END COL -->
 
-        <div class="col-md-6 mb-1">
-          <div class="card-body">
-            <div id="carouselExampleOne" class="carousel slide" data-ride="false">
-              <ol class="carousel-indicators">
-                <li data-target="#carouselExampleOne" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleOne" data-slide-to="1"></li>
-                <li data-target="#carouselExampleOne" data-slide-to="2"></li>
-              </ol>
-              <div class="carousel-inner" role="listbox">
-                <div class="carousel-item active">
-                  <img class="d-block img-fluid" style="height: 26rem; width: 39rem;" src="/images/house2.png" alt="Property Image">
+        <div class="col-md-6">
+          <div class="card h-100">
+            <div class="card-body">
+              <div id="carouselOne" class="carousel slide" data-ride="false">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselOne" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselOne" data-slide-to="1"></li>
+                  <li data-target="#carouselOne" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner" role="listbox">
+                  <div class="carousel-item active">
+                    <img class="img-fluid" src="/images/house2.png" alt="Property Image">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="img-fluid" src="/images/house2.png" alt="Property Image">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="img-fluid" src="/images/house2.png" alt="Property Image">
+                  </div>
                 </div>
-                <div class="carousel-item">
-                  <img class="d-block img-fluid" style="height: 26rem; width: 39rem;" src="/images/house2.png" alt="Property Image">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block img-fluid" style="height: 26rem; width: 39rem;" src="/images/house2.png" alt="Property Image">
-                </div>
+                <a class="carousel-control-prev" href="#carouselOne" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon"></span>
+                </a>
+                <a class="carousel-control-next" href="#carouselOne" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon"></span>
+                </a>
               </div>
-              <a class="carousel-control-prev" href="#carouselExampleOne" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleOne" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              </a>
             </div>
           </div>
         </div> <!-- END COL -->
@@ -133,8 +135,8 @@
       <br />
 
       <div class="row">
-        <div class="col-md-6 mb-1">
-          <div class="card text-center" style="height: 26rem; width: 39rem; padding: 10px;">
+        <div class="col-md-6">
+          <div class="card h-100 text-center" style="padding: 10px;">
             <div class="card-body">
               <p class="card-text font-weight-bold">Property Address</p>
               <p class="card-text">Details: Number of rooms, fence, sq ft, etc.</p>
@@ -142,31 +144,33 @@
           </div>
         </div> <!-- END COL -->
 
-        <div class="col-md-6 mb-1">
-          <div class="card-body">
-            <div id="carouselExampleTwo" class="carousel slide" data-ride="false">
-              <ol class="carousel-indicators">
-                <li data-target="#carouselExampleTwo" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleTwo" data-slide-to="1"></li>
-                <li data-target="#carouselExampleTwo" data-slide-to="2"></li>
-              </ol>
-              <div class="carousel-inner" role="listbox">
-                <div class="carousel-item active">
-                  <img class="d-block img-fluid" style="height: 26rem; width: 39rem;" src="/images/house2.png" alt="Property Image">
+        <div class="col-md-6">
+          <div class="card h-100">
+            <div class="card-body">
+              <div id="carouselTwo" class="carousel slide" data-ride="false">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselTwo" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselTwo" data-slide-to="1"></li>
+                  <li data-target="#carouselTwo" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner" role="listbox">
+                  <div class="carousel-item active">
+                    <img class="img-fluid" src="/images/house2.png" alt="Property Image">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="img-fluid" src="/images/house2.png" alt="Property Image">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="img-fluid" src="/images/house2.png" alt="Property Image">
+                  </div>
                 </div>
-                <div class="carousel-item">
-                  <img class="d-block img-fluid" style="height: 26rem; width: 39rem;" src="/images/house2.png" alt="Property Image">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block img-fluid" style="height: 26rem; width: 39rem;" src="/images/house2.png" alt="Property Image">
-                </div>
+                <a class="carousel-control-prev" href="#carouselTwo" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon"></span>
+                </a>
+                <a class="carousel-control-next" href="#carouselTwo" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon"></span>
+                </a>
               </div>
-              <a class="carousel-control-prev" href="#carouselExampleTwo" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleTwo" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              </a>
             </div>
           </div>
         </div> <!-- END COL -->
@@ -175,8 +179,8 @@
       <br />
 
       <div class="row">
-        <div class="col-md-6 mb-1">
-          <div class="card text-center" style="height: 26rem; width: 39rem; padding: 10px;">
+        <div class="col-md-6">
+          <div class="card h-100 text-center" style="padding: 10px;">
             <div class="card-body">
               <p class="card-text font-weight-bold">Property Address</p>
               <p class="card-text">Details: Number of rooms, fence, sq ft, etc.</p>
@@ -184,31 +188,33 @@
           </div>
         </div> <!-- END COL -->
 
-        <div class="col-md-6 mb-1">
-          <div class="card-body">
-            <div id="carouselExampleThree" class="carousel slide" data-ride="false">
-              <ol class="carousel-indicators">
-                <li data-target="#carouselExampleThree" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleThree" data-slide-to="1"></li>
-                <li data-target="#carouselExampleThree" data-slide-to="2"></li>
-              </ol>
-              <div class="carousel-inner" role="listbox">
-                <div class="carousel-item active">
-                  <img class="d-block img-fluid" style="height: 26rem; width: 39rem;" src="/images/house2.png" alt="Property Image">
+        <div class="col-md-6">
+          <div class="card h-100">
+            <div class="card-body">
+              <div id="carouselThree" class="carousel slide" data-ride="false">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselThree" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselThree" data-slide-to="1"></li>
+                  <li data-target="#carouselThree" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner" role="listbox">
+                  <div class="carousel-item active">
+                    <img class="img-fluid" src="/images/house2.png" alt="Property Image">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="img-fluid" src="/images/house2.png" alt="Property Image">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="img-fluid" src="/images/house2.png" alt="Property Image">
+                  </div>
                 </div>
-                <div class="carousel-item">
-                  <img class="d-block img-fluid" style="height: 26rem; width: 39rem;" src="/images/house2.png" alt="Property Image">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block img-fluid" style="height: 26rem; width: 39rem;" src="/images/house2.png" alt="Property Image">
-                </div>
+                <a class="carousel-control-prev" href="#carouselThree" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon"></span>
+                </a>
+                <a class="carousel-control-next" href="#carouselThree" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon"></span>
+                </a>
               </div>
-              <a class="carousel-control-prev" href="#carouselExampleThree" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleThree" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              </a>
             </div>
           </div>
         </div> <!-- END COL -->
