Fixed MAC os button visibility bug

--- a/public/views/contact.ejs
+++ b/public/views/contact.ejs
@@ -22,7 +22,7 @@
                 <textarea class="form-control" type="textarea" id="message" placeholder="Message" maxlength="250" rows="7"></textarea>
               </div>
               <div class="text-center">
-                  <button class="btn btn-default no-webkit" data-toggle="modal" data-target="#inactiveModal" type="submit">Submit</button>
+                  <button class="btn btn-md btn-outline-dark no-webkit" data-toggle="modal" data-target="#inactiveModal" type="submit">Submit</button>
               </div>
             </form>
           </div>
