--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -40,7 +40,7 @@
               <input type="checkbox" id="remember" name="remember"> Remember me
             </label>
           </div>
-          <button class="btn btn-md btn-default btn-block no-webkit" type="submit">Login</button>
+          <button class="btn btn-md btn-outline-dark btn-block no-webkit" type="submit">Login</button>
         </form>
       </div>
     </div>
