--- a/public/views/listings.ejs
+++ b/public/views/listings.ejs
@@ -83,7 +83,7 @@
               </div>
             </fieldset>
 
-            <button type="submit" class="btn btn-default">Search</button>
+            <button type="submit" class="btn btn-md btn-outline-dark">Search</button>
           </form>        
         </div> <!-- END COL -->
       </div> <!-- END ROW -->
