--- a/public/views/register.ejs
+++ b/public/views/register.ejs
@@ -32,12 +32,12 @@
             </div>
           </div>
           <div class="row">  
-            <div class="col-md-12 mb-2">
+            <div class="col-md-12 mb-4">
               <label for="passwordTwo" class="sr-only">Confirm Password</label>              
               <input type="password" class="form-control" name="passwordTwo" placeholder="Confirm Password" required>
             </div>
           </div>
-          <button class="no-webkit btn btn-md btn-default btn-block" type="submit">Login</button>
+          <button class="no-webkit btn btn-md btn-outline-dark btn-block" type="submit">Submit</button>
         </form>
       </div>
 
