--- a/public/views/home.ejs
+++ b/public/views/home.ejs
@@ -4,7 +4,7 @@
 
   <body>
     <div class="container">   
-      <% include includes/nav %>
+      <% include includes/nav.ejs %>
         <div class="jumbotron mt-1">
           <h1 class="display-3">
             Spacious Modern Living
