--- a/public/views/includes/nav.ejs
+++ b/public/views/includes/nav.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-dark fixed-top" style="background-color: #800000;">
+<nav class="nav-bar navbar navbar-expand-sm navbar-dark fixed-top" style="background-color: #800000;">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navCollapsed">
         <span class="navbar-toggler-icon"></span>
     </button>
