--- a/public/assets/less/includes/main.less
+++ b/public/assets/less/includes/main.less
@@ -1,5 +1,9 @@
 @import url('https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css');
 
+.nav-bar {
+  background-color: #800000;
+}
+
 #register {
   max-width: 330px;
   margin: 0 auto;
